# bmad-assist

./: .gitignore  CHANGELOG.md  README.md  bmad-assist.yaml  bmad-assist.yaml.example  pyproject.toml
.github/workflows/: test.yml
docs/: configuration.md
src/bmad_assist/: __init__.py  cli.py  cli_start_point.py  executor.py
src/bmad_assist/antipatterns/: extractor.py  prompts.py
src/bmad_assist/benchmarking/: collector.py  extraction.py  ground_truth.py  master_tracking.py  reports.py  schema.py  storage.py
src/bmad_assist/bmad/: correction.py  parser.py  state_reader.py
src/bmad_assist/code_review/: orchestrator.py
src/bmad_assist/commands/: benchmark.py  compile.py  experiment.py  init.py  patch.py  qa.py  serve.py  sprint.py  test.py
src/bmad_assist/compiler/: core.py  filtering.py  parser.py  prompt_compression.py  shared_utils.py  source_context.py  step_chain.py  strategic_context.py  workflow_discovery.py
src/bmad_assist/compiler/patching/: compiler.py  discovery.py
src/bmad_assist/compiler/variables/: core.py  epic_story.py  sprint_status.py
src/bmad_assist/compiler/workflows/: code_review.py  code_review_synthesis.py  create_story.py  dev_story.py  retrospective.py  validate_story.py  validate_story_synthesis.py
src/bmad_assist/core/: __init__.py  async_utils.py  config.py  config_editor.py  config_generator.py  extraction.py  io.py  paths.py  platform_command.py  project_setup.py  retry.py
src/bmad_assist/core/config/: __init__.py  constants.py  env.py  loaders.py  loop_config.py  schema.py
src/bmad_assist/core/config/models/: __init__.py  features.py  loop.py  main.py  paths.py  providers.py  source_context.py  strategic_context.py
src/bmad_assist/core/loop/: __init__.py  backfill.py  dashboard_events.py  dispatch.py  epic_phases.py  helpers.py  interactive.py  locking.py  notifications.py  runner.py  signals.py  sprint_sync.py  story_transitions.py
src/bmad_assist/core/loop/handlers/: __init__.py  base.py  code_review.py  code_review_synthesis.py  validate_story.py  validate_story_synthesis.py
src/bmad_assist/dashboard/: build_static.py  experiments.py  schemas.py  server.py
src/bmad_assist/dashboard/routes/: content.py  loop.py
src/bmad_assist/dashboard/routes/config/: backup.py  crud.py
src/bmad_assist/dashboard/routes/config/utils/: __init__.py  diff.py  security.py
src/bmad_assist/dashboard/routes/experiments/: fixtures.py  runs.py
src/bmad_assist/dashboard/utils/: validator_mapping.py
src/bmad_assist/default_patches/: code-review.patch.yaml  create-story.patch.yaml  defaults.yaml  dev-story.patch.yaml  qa-plan-execute.patch.yaml  qa-plan-generate.patch.yaml  retrospective.patch.yaml  validate-story.patch.yaml
src/bmad_assist/experiments/: comparison.py  config.py  fixture.py  loop.py  patchset.py  runner.py
src/bmad_assist/git/: committer.py  diff.py
src/bmad_assist/notifications/: formatter.py
src/bmad_assist/providers/: __init__.py  amp.py  base.py  claude.py  claude_sdk.py  copilot.py  cursor_agent.py  gemini.py  kimi.py  opencode.py  tool_guard.py
src/bmad_assist/qa/: batch_executor.py  executor.py  generator.py  playwright_executor.py
src/bmad_assist/sprint/: classifier.py  dialog.py  generator.py  models.py  repair.py  resume_validation.py  scanner.py  sync.py  writer.py
src/bmad_assist/testarch/: eligibility.py
src/bmad_assist/testarch/context/: service.py
src/bmad_assist/testarch/handlers/: base.py
src/bmad_assist/testarch/knowledge/: cache.py
src/bmad_assist/testarch/standalone/: cli.py  runner.py
src/bmad_assist/validation/: __init__.py  benchmarking_integration.py  evidence_score.py  orchestrator.py  reports.py  validation_metrics.py
src/bmad_assist/workflows/: __init__.py
tests/: conftest.py  test_cli.py  test_cli_sprint.py
tests/antipatterns/: test_extractor.py  test_extractor_debug_logging.py
tests/benchmarking/: test_reports.py
tests/bmad/: test_correction.py  test_parser.py  test_state_reader.py  test_substory_parsing.py
tests/code_review/: test_orchestrator.py  test_story_22_7_persistence.py
tests/compiler/: test_cli_compile.py  test_core.py  test_dev_story.py  test_error_handling.py  test_filtering.py  test_prompt_compression.py  test_source_context.py  test_strategic_context.py  test_token_budget.py
tests/compiler/patching/: test_cache.py  test_cli.py  test_discovery.py  test_integration.py
tests/compiler/workflows/: test_validate_story_synthesis.py
tests/core/: test_async_utils.py  test_config_editor.py  test_config_env.py  test_config_generator.py  test_config_tool_guard_defaults.py  test_extraction_termination.py  test_helper_timeout_config.py  test_paths.py  test_platform_command.py  test_prompt_budget_trimming.py  test_retry.py  test_state_load.py  test_state_location.py
tests/core/loop/: conftest.py  test_backfill.py  test_code_review_synthesis_handler.py  test_dev_story_handler.py  test_interactive.py  test_lock_cleanup.py  test_runner.py  test_runner_epic_scope.py  test_story_transitions.py  test_validation_handlers.py
tests/dashboard/: test_cli_serve.py  test_config_routes.py
tests/experiments/: test_runner.py
tests/git/: test_committer.py  test_diff.py
tests/providers/: conftest.py  test_amp.py  test_claude.py  test_claude_sdk.py  test_copilot.py  test_cursor_agent.py  test_gemini.py  test_opencode.py  test_timeout.py  test_timeout_prompt_leak.py  test_tool_guard.py
tests/sprint/: test_scanner.py  test_writer.py
tests/testarch/: test_eligibility.py
tests/testarch/handlers/: test_base.py
tests/validation/: test_evidence_score.py  test_orchestrator.py  test_timeout_scaling.py
